Stop social media from jumping to the top

--- a/src/features/banner/Banner.module.scss
+++ b/src/features/banner/Banner.module.scss
@@ -5,15 +5,13 @@ $animation-time: 1s;
 $animation-move-left: moveLeft $animation-time;
 $animation-move-left-large-screen: moveLeftLargeScreen $animation-time;
 $margin-bottom: 3rem;
+$medium-screen-width: 79rem;
 
 .banner {
+    display: flex;
+    flex-direction: row;
     background-color: colors.$color-banner-background;
     box-shadow: 5px 5px 50px colors.$color-banner-box-shadow;
-
-    @include mixins.medium-screen {
-        display: flex;
-        flex-direction: row;
-    }
 }
 
 .socialMedia {
@@ -32,7 +30,7 @@ $margin-bottom: 3rem;
     //stops page from jumping during animation
     overflow-x: hidden;
 
-    @include mixins.medium-screen {
+    @include mixins.medium-screen($medium-screen-width) {
         grid-template-columns: auto 1fr;
         grid-template-rows: auto auto;
         column-gap: 3rem;
@@ -68,7 +66,7 @@ $margin-bottom: 3rem;
     font-weight: 600;
     font-size: 1.2rem;
 
-    @include mixins.medium-screen {
+    @include mixins.medium-screen($medium-screen-width) {
         font-size: 2.8rem;
     }
 
@@ -90,7 +88,7 @@ $margin-bottom: 3rem;
         font-size: 1.6rem;
     }
 
-    @include mixins.medium-screen {
+    @include mixins.medium-screen($medium-screen-width) {
         font-size: 2.8rem;
 
         &:first-letter {
@@ -134,7 +132,7 @@ $margin-bottom: 3rem;
     row-gap: 1rem;
     margin-top: 1rem;
 
-    @include mixins.medium-screen {
+    @include mixins.medium-screen($medium-screen-width) {
         row-gap: 2rem;
     }
 
@@ -160,7 +158,7 @@ $margin-bottom: 3rem;
     flex-wrap: wrap;
     row-gap: 0.5rem;
 
-    @include mixins.medium-screen {
+    @include mixins.medium-screen($medium-screen-width) {
         flex-wrap: nowrap;
     }
 
@@ -173,8 +171,9 @@ $margin-bottom: 3rem;
     align-items: center;
     width: 100%;
 
-    @include mixins.medium-screen {
+    @include mixins.medium-screen($medium-screen-width) {
         column-gap: 1rem;
+        width: auto;
     }
 }
 
@@ -188,7 +187,7 @@ $margin-bottom: 3rem;
     border: 2px solid colors.$color-button-accent;
 
 
-    @include mixins.medium-screen {
+    @include mixins.medium-screen($medium-screen-width) {
         width: auto;
     }
 
@@ -214,7 +213,7 @@ $margin-bottom: 3rem;
 }
 
 .myMotivationQuote {
-    @include mixins.medium-screen {
+    @include mixins.medium-screen($medium-screen-width) {
         align-self: end;
         width: 25rem;
     }
